--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@babel/polyfill": "^7.0.0-rc.1",
     "vue": "^2.5.17",
+    "vue-cli": "^2.9.6",
     "vue-router": "^3.0.1",
     "vuetify": "^1.2.0",
     "vuex": "^3.0.1"
